# btex

./: .gitignore  README.md  main.py  out.tex  pyproject.toml  test.btex
btex/: __init__.py
example/: compile.bat  components.btex  test.btex
examples/components/: component.btex  main.btex
examples/figures/: main.btex
examples/first_document/: README.md  main.btex
examples/math/: main.btex
vscode-extension/: README.md  TODO  btex-0.0.1.vsix  language-configuration.json  package.json
vscode-extension/snippets/: btex.json
vscode-extension/syntaxes/: btex.tmLanguage.json
